--- a/CreditCard/build.gradle
+++ b/CreditCard/build.gradle
@@ -6,7 +6,8 @@ plugins {
 
 group = 'com.project'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '18'
+//sourceCompatibility = '18'
+sourceCompatibility = '17'
 
 configurations {
 	compileOnly {
@@ -28,6 +29,15 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+
+	implementation 'org.springframework.boot:spring-boot-starter-batch'
+	testImplementation group: 'org.awaitility', name: 'awaitility', version: '4.2.0'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.batch:spring-batch-test'
+	// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations
+	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.0-rc1'
+	// https://mvnrepository.com/artifact/commons-io/commons-io
+	implementation 'commons-io:commons-io:2.6'
 }
 
 tasks.named('test') {
